plugins {
    id 'java'
}

group 'com.atzuche'
version '0.0.1-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    maven{url "http://10.0.3.208:8081/nexus/content/groups/public/"}
    maven{url "http://maven.aliyun.com/nexus/content/groups/public/"}
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'com.aliyun.mns:aliyun-sdk-mns:1.1.4'
    compile("commons-configuration:commons-configuration:1.8")
    compile("com.autoyol.aliyunmq:auto-aliyunmq-core:0.0.2")
    compile 'org.springframework.amqp:spring-rabbit:1.7.5.RELEASE'
    compile 'com.rabbitmq:amqp-client:4.0.3'
    compile "com.autoyol:auto-web-starter:1.0-SNAPSHOT"
    compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.2.4.RELEASE'
    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.4'
    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.1.1')
    compile 'org.apache.commons:commons-email:1.3.2'
    compile 'org.apache.commons:commons-lang3:3.1'
    compile 'commons-httpclient:commons-httpclient:3.1'
    compile 'commons-io:commons-io:2.4'
    compile 'net.sf.json-lib:json-lib:2.4:jdk15'
    compile project(":util-all:order-commons")
    compile project(":config")
    compile project(":util-all:fee-calculator")
    compile 'com.aliyun.oss:aliyun-sdk-oss:2.8.3'
    compile('com.autoyol.car:auto-car-service-api:2020042201-SNAPSHOT')
    compile project(":order-transport")
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.0'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.0'
    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-parameter-names', version: '2.10.0'
    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.10.0'
    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.10.0'
    compile project(":order-mq")
    compile project(":order-core-all:renter-all:renter-commodity")
    compile project(":order-core-all:renter-all:renter-order")

}
